codepkg/objects/Agency_Rate_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Rate Agreements</relationshipLabel>
        <relationshipName>Agency_Rate_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Approval_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Level_2_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reimbursement Staff Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MACS_ID__c</fullName>
        <formula>Agency__r.MACS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MACS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Deputy Chief of Administration Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_From_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revised From Id</label>
        <referenceTo>Agency_Rate_Agreement__c</referenceTo>
        <relationshipLabel>Agency Rate Agreements</relationshipLabel>
        <relationshipName>Agency_Rate_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <label>Agency Rate Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Level_1_Pending_Approval_Queue</fullName>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Reviewed and Pending Approval</value>
        </filters>
        <label>Level 1 Pending Approval Queue</label>
    </listViews>
    <listViews>
        <fullName>Level_2_Pending_Approval_Queue</fullName>
        <columns>Agency__c</columns>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending Review</value>
        </filters>
        <label>Level 2 Pending Review Queue</label>
    </listViews>
    <listViews>
        <fullName>MARS_RateAgreement_Agency_Rate_Agreement</fullName>
        <filterScope>Queue</filterScope>
        <label>MARS_RateAgreement</label>
        <queue>MARS_RateAgreement</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency Rate Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Rate Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>